Fix click-a-bility of overflowing div in image picker [#95933546]
https://www.pivotaltracker.com/n/projects/1263626/stories/95933546

--- a/src/stylus/components/image-picker.styl
+++ b/src/stylus/components/image-picker.styl
@@ -1,10 +1,10 @@
 .image-picker
+  position relative
   display inline-block
   box-sizing border-box
   vertical-align top
   margin-top 12px
   background-color white
-  padding-right 10px
   border-radius 3px
   box-shadow -1px 0px 2px hsla(0,0,50,0.4)
   no-select()
@@ -15,13 +15,15 @@
     background-position right center
     background-repeat no-repeat
     background-size 10px 10px
+    width 45px
+    height 45px
     img
       padding 4px
       max-width 42px
       max-height 42px
   .image-choices
+    position absolute
     box-sizing border-box
-    margin 0px
     padding 4px
     background-color white
     border-radius 0px 0px 2px 2px
@@ -31,7 +33,7 @@
     cursor pointer
     z-index 5
     width 200px
-    margin-left -125px
+    right 0px
     enable-flex(wp:wrap)
     no-select()
     transition 0.1s
@@ -46,8 +48,6 @@
    .image-choice
       padding 4px
       padding-bottom 12px
-      max-width 24px
-      max-height 24x
       &.selected
         background-color inherit
         box-shadow none
